@@ -12,6 +12,9 @@
 %ignore wxGridCellEditor::wxGridCellEditor();
 %ignore wxGridCellEditor::~wxGridCellEditor();
 
+#This is to get arround SWIG trying to call a protected destructor
+%nodefault wxGridCellEditor;
+
 %import "include/wxObject.h"
 %import "include/wxEvtHandler.h"
 
